Supplier added to the flow